# VOSS

./: .gitignore  README.md  Voss.g4  p.js  package.json  play.ts  test.voss  test.voss.rs  test.voss.ts  tsconfig.json  view.txt
cli/: bin.js
example/: example.voss  index.html  main.ts  package.json
example/server/: Cargo.toml
example/server/src/: main.rs  voss.rs  voss_runtime.rs
resources/: rpc.rs  runtime.rs  rust.template  typescript.template
runtime/: builder.ts  changeNotifier.ts  index.ts  md5.ts  object.ts  rand.ts  reader.ts  session.ts  types.ts  utils.ts  uuid.ts  view.ts
src/: ast.ts  counter.ts  ir.ts  lib.ts  main.ts  parser.ts  pretty.ts  resources.ts  ts.ts  utils.ts  writer.ts
src/backend/: r.ts  rust.rpc.ts  rust.runtime.ts  rust.ts  rust.vcs.ts  ts.ts  typescript.ts  writer.ts
src/frontend/: parser.ts
src/ir/: enum.ts  field.ts  gen.ts  index.ts  object.ts  program.ts  rpc.ts  type.ts  vcs.ts  view.ts
src/template/: HTMLEntitySearch.ts  builtin.ts  compiler.ts  component.ts  context.ts  entities.ts  play.ts  symbols.ts  tokenizer.ts  tree.ts  types.ts  typescript.ts  utils.ts  writer.ts
src/template/collections/: builtin.ts  rust.ts  typescript.ts
src/template/expression/: expression.ts  parser.ts  tokenizer.ts
src/templates/: typescript.tblk.json
src/templates/rust/: _mod_objects.tblk  _mod_rpc.tblk  _mod_server.tblk  _mod_vcs.tblk  _object.tblk  _oneof.tblk  _rpc.tblk  _runtime.tblk  index.tblk
templates/: rust.tblk.json
templates/typescript/: _oneof.tblk  _struct.tblk  _structBase.tblk  index.tblk
(+8 files in other folders)
