[package]
name = "server"
version = "0.1.0"
authors = ["Parsa Ghadimi <qti3eqti3e@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0"
actix-rt = "1.0"
actix-web-actors = "2.0.0"
rocksdb = "0.13.0"
bincode = "1.2.1"
serde = "1.0.106"
rand = "0.7.3"
